# datasus-fetcher

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
datasus_fetcher/: __init__.py  cli.py  fetcher.py  remote_names.py  storage.py
src/datasus_fetcher/: __init__.py  cli.py  fetcher.py  meta.py  plugin.py  remote_names.py  slicer.py  storage.py
tests/: test_fetcher.py  test_remote_names.py  test_slicer.py  test_storage.py
