[project]
name = "datasus-fetcher"
authors = [{ name = "Daniel Komesu", email = "danielkomesu@gmail.com" }]
description = "Downloader of DATASUS raw data files"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "data",
    "open data",
    "data fetcher",
    "health",
    "datasus",
    "microdata",
    "brazil",
    "saúde",
]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
]

[project.urls]
Homepage = "https://github.com/dankkom/datasus-fetcher"
Repository = "https://github.com/dankkom/datasus-fetcher"
"Bug Tracker" = "https://github.com/dankkom/datasus-fetcher/issues"

[tool.setuptools]
packages = ["datasus_fetcher"]

[tool.setuptools.dynamic]
version = { attr = "datasus_fetcher.__version__" }

[dependency-groups]
dev = ["build>=1.2.2.post1", "wheel>=0.45.0", "twine>=5.1.1"]

[project.scripts]
datasus-fetcher = "datasus_fetcher.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
