[project]
name = "datasus-fetcher"
version = "0.4.1"
description = "Downloader of DATASUS raw data files"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
    "data",
    "open data",
    "data fetcher",
    "health",
    "datasus",
    "microdata",
    "brazil",
    "saúde",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
]
dependencies = [
    "quantilica-core @ git+https://github.com/Quantilica/quantilica-core.git",
]

[project.urls]
Homepage = "https://github.com/Quantilica/datasus-fetcher"
Repository = "https://github.com/Quantilica/datasus-fetcher"
Issues = "https://github.com/Quantilica/datasus-fetcher/issues"

[project.scripts]
datasus-fetcher = "datasus_fetcher.cli:main"

[project.entry-points."quantilica.fetchers"]
datasus = "datasus_fetcher.plugin:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "I", "UP", "B"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
